# cobalt-skymap

./: .gitignore  CI_CD.md  eslint.config.mjs  jest.config.ts  jest.setup.ts  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
.serena/: project.yml
app/: globals.css  page.tsx
components/common/: ar-mode-toggle.tsx  log-panel.tsx  log-viewer.tsx  sensor-control-toggle.tsx  theme-customizer.tsx
components/landing/: hero-section.tsx  navbar.tsx
components/providers/: settings-toaster.tsx
components/ui/: alert-dialog.tsx  color-picker.tsx  command.tsx  dialog.tsx  drawer.tsx  sheet.tsx
docs/deployment/: index.md
docs/getting-started/: installation.md
docs/plans/: 2026-03-05-daily-knowledge-interaction-implementation-plan.md  2026-03-05-starmap-loading-implementation-plan.md  2026-03-06-github-release-updater-design.md  2026-03-06-github-release-updater-implementation-plan.md  2026-03-06-observation-execution-chain-design.md  2026-03-06-observation-execution-chain-implementation-plan.md  2026-03-06-project-error-cleanup-implementation-plan.md  2026-03-06-project-lint-cleanup-implementation-plan.md  2026-03-06-target-management-multilist-design.md  2026-03-06-target-management-multilist-implementation-plan.md  2026-03-06-warning-cleanup-implementation-plan.md
docs/reference/: observation-system-contracts.md
i18n/messages/: en.json  zh.json
lib/astronomy/: execution-exporter.ts  plan-exporter.ts  (+3 more)
scripts/: dev-server.cjs  patch-baseline-browser-mapping.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/data/: mod.rs  observation_log.rs  session_io.rs
src-tauri/src/platform/: mod.rs  updater.rs
src-tauri/src/platform/plate_solver/: mod.rs  online.rs  types.rs
types/: feedback.ts  stellarium-canvas.ts
(+201 files in other folders)
