[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
regex-lite = "0.1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "deflate", "stream", "socks", "multipart", "rustls-tls-native-roots", "charset", "http2", "system-proxy"] }
url = "2.5"
lazy_static = "1.5"
once_cell = "1.19"
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time", "macros"] }
time = { version = "0.3", features = ["formatting", "macros"] }
keyring = "3"

# Native disk space API
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

# Geolocation plugin for mobile location services
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-geolocation = "2"

# Single instance plugin for desktop (prevent multiple app instances)
[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
